--- a/app/src/main/res/layout/activity_pager_items.xml
+++ b/app/src/main/res/layout/activity_pager_items.xml
@@ -15,7 +15,7 @@
         tools:layout_editor_absoluteY="21dp" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textPagerPhoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Phone number"
@@ -23,7 +23,7 @@
         tools:layout_editor_absoluteY="45dp" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/textPagerKeyword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Pager keyword"
@@ -31,7 +31,7 @@
         tools:layout_editor_absoluteY="64dp" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textPagerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Pager name"
