--- a/app/src/main/res/layout/activity_developer_options.xml
+++ b/app/src/main/res/layout/activity_developer_options.xml
@@ -55,4 +55,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contactsList" />
 
+    <Button
+        android:id="@+id/testAlertPagerBtn3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="167dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="177dp"
+        android:text="pozivnik intervencije fullscreen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/testAlertPagerBtn2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
