--- a/app/src/main/res/drawable/coming_custom_button.xml
+++ b/app/src/main/res/drawable/coming_custom_button.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-    <solid android:color="#016837"/>
+    <solid android:color="#F1F1F1"/>
     <corners android:radius="999dp"/>
-    <stroke android:color="#F1F1F1" android:width="2dp"/>
+    <stroke android:color="#016837" android:width="5dp"/>
 
 </shape>
