--- a/app/src/main/res/drawable/shape_button_swipe.xml
+++ b/app/src/main/res/drawable/shape_button_swipe.xml
@@ -3,8 +3,8 @@
     <item android:state_pressed="false" android:state_selected="false">
         <shape android:shape="rectangle">
             <corners android:radius="50dp" />
-            <solid android:color="#F1F1F1" />
-            <stroke android:color="#96191D" android:width="2.5dp"/>
+            <solid android:color="#F6921E" />
+            <stroke android:color="#F1F1F1" android:width="2.5dp"/>
         </shape>
     </item>
 </selector>
